--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Test-WWW-Mechanize-1.34.tar.gz: dd60a3fa791ec0e65f5d007fbbb38657ff18c0e0
 sources:
-  "Test-WWW-Mechanize-1.34.tar.gz": dd60a3fa791ec0e65f5d007fbbb38657ff18c0e0
+  Test-WWW-Mechanize-1.44.tar.gz: 1417fd0018eb0bb20497984778e0f202493c160d
